# primitiv-java

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  internal.h  primitiv_Device.cc  primitiv_Initializer.cc  primitiv_Parameter.cc  primitiv_Shape.cc  primitiv_initializers_Normal.cc  primitiv_initializers_XavierUniform.cc
src/cpp/: Graph.cc  Model.cc  Node.cc  Optimizer.cc  Parameter.cc  Shape.cc  Tensor.cc  functions.cc  internal.h
src/cpp/devices/: CUDA.cc  Eigen.cc  Naive.cc  OpenCL.cc
src/cpp/initializers/: Constant.cc  Identity.cc  Uniform.cc  XavierNormal.cc
src/cpp/optimizers/: AdaDelta.cc  AdaGrad.cc  Adam.cc  MomentumSGD.cc  RMSProp.cc  SGD.cc
src/primitiv/: Device.java  Graph.java  HandleObjectHashMap.java  Initializer.java  Model.java  NativeLibrary.java  Node.java  Optimizer.java  Parameter.java  Shape.java  Tensor.java  functions.java
src/primitiv/devices/: CUDA.java  Eigen.java  Naive.java  OpenCL.java
src/primitiv/initializers/: Constant.java  Identity.java  Normal.java  Uniform.java  XavierNormal.java  XavierUniform.java
src/primitiv/optimizers/: AdaDelta.java  AdaGrad.java  Adam.java  MomentumSGD.java  RMSProp.java  SGD.java
